--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Python application
 
 on:
@@ -21,7 +18,7 @@ jobs:
         with:
           python-version: 3.7
       - name: Set up JDK
-        uses: ctions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: '8.0.232'
           java-package: jdk
