--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
-      - name: Set up JDK
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: '8.0.232'
