--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install wheel
           ./dev/install_dependencies.sh
       - name: Build
         run: |
