--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -1,4 +1,4 @@
-name: Python application
+name: RayDP Test
 
 on:
   push:
@@ -13,10 +13,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Set up Python 3.7
         uses: actions/setup-python@v1
         with:
           python-version: 3.7
+
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -24,14 +26,26 @@ jobs:
           java-package: jdk
           architecture: x64
 
-      - name: Install dependencies
+      - name: Cache dependencies
+        id: cache-denpendencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-cache
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Generate dependencies
+        if: steps.cache-denpendencies.outputs.cache-hit != 'true'
         run: |
           python -m pip install --upgrade pip
           pip install wheel
           ./dev/install_dependencies.sh
+
       - name: Build
         run: |
           pip install -e .
-      - name: Test with pytest
+
+      - name: Test
         run: |
           pytest ./python/
