--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-cache
+          key: ${{ runner.os }}-cache-denpendencies
           restore-keys: |
             ${{ runner.os }}-pip-
 
@@ -41,6 +41,24 @@ jobs:
           python -m pip install --upgrade pip
           pip install wheel
           ./dev/install_dependencies.sh
+
+      - name: Cache Spark
+        id: cache-spark
+        uses: actions/cache@v1
+        with:
+          path: ~
+          key: ${{ runner.os }}-cache-spark
+          restore-keys: |
+            ${{ runner.os }}-spark-
+
+      - name: Download Spark
+        if: steps.cache-spark.outputs.cache-hit != 'true'
+        run: |
+          ./dev/install_spark.sh true
+
+      - name: Install Spark
+        run: |
+          ./dev/install_spark.sh
 
       - name: Build
         run: |
