--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -60,7 +60,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
-          ./dev/install_dependencies.sh
+          ./dev/install_dependencies.sh false
           ./dev/install_spark.sh
 
       - name: Build
