--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,12 +22,18 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.12</artifactId>
-      <version>3.0.0-preview2</version>
+      <version>3.0.0</version>
     </dependency>
 
     <dependency>
       <groupId>io.ray</groupId>
       <artifactId>ray-api</artifactId>
+      <version>0.1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.ray</groupId>
+      <artifactId>ray-runtime</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
 
