--- a/core/src/main/resources/ray.conf
+++ b/core/src/main/resources/ray.conf
@@ -8,7 +8,7 @@ ray {
   // ----------------------
 
   // IP of this node. if not provided, IP will be automatically detected.
-  node-ip: "sr233"
+  node-ip: "127.0.0.1"
 
   // Run mode, available options are:
   //
@@ -39,7 +39,7 @@ ray {
     pattern: "%d{yyyy-MM-dd HH:mm:ss,SSS} %p %c{1} [%t]: %m%n"
     // Root directory of the log files.
     // If this is not set, the default one will be `${temp-dir}/session_xxx/logs`.
-    dir: ""
+    dir: "/tmp/ray/session_latest/logs"
     // Maximum size that a log file is allowed to reach before being rolled over to backup files.
     max-file-size: 500MB
     // Maximum number of backup files to keep around.
@@ -64,7 +64,7 @@ ray {
     // The address of the redis server to connect, in format `ip:port`.
     // If not provided, Ray processes will be started locally, including
     // Redis server, Raylet and object store.
-    address: "sr233"
+    address: "127.0.0.1:6379"
     // If `redis.server` isn't provided, which port we should use to start redis server.
     // If `head-port` is not provided, it will be generated randomly.
     // head-port: 6379
@@ -84,7 +84,7 @@ ray {
   object-store {
     // RPC socket name of object store.
     // If this is not set, the default name will be `${temp-dir}/session_xxx/sockets/object_store`.
-    socket-name: ""
+    socket-name: "/tmp/ray/session_latest/sockets/plasma_store"
     // Initial size of the object store.
     size: 10 MB
   }
@@ -95,13 +95,13 @@ ray {
   raylet {
     // RPC socket name of Raylet.
     // If this is not set, the default name will be `${temp-dir}/session_xxx/sockets/raylet`.
-    socket-name: ""
+    socket-name: "/tmp/ray/session_latest/sockets/raylet"
     // Listening port for node manager.
-    node-manager-port: 0
+    node-manager-port: 61012
 
     // See src/ray/ray_config_def.h for options.
     config {
-      num_workers_per_process_java: 10
+      num_workers_per_process_java: 1
     }
   }
 
