--- a/python/MANIFEST.in
+++ b/python/MANIFEST.in
@@ -1,3 +1,3 @@
 include README.md
-recursive-include deps/jars *.jar
+recursive-include raydp/jars *.jar
 global-exclude *.py[cod] __pycache__ .DS_Store
