--- a/core/pom.xml
+++ b/core/pom.xml
@@ -37,6 +37,13 @@
       <version>0.1-SNAPSHOT</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.11.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
