--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,6 +44,12 @@
       <version>2.11.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>net.sf.py4j</groupId>
+      <artifactId>py4j</artifactId>
+      <version>0.10.9</version>
+    </dependency>
+
   </dependencies>
 
   <build>
