--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.12</artifactId>
-      <version>3.0.0</version>
+      <version>3.0.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -37,17 +37,11 @@
       <version>0.1-SNAPSHOT</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-      <version>2.11.1</version>
-    </dependency>
-
     <dependency>
       <groupId>net.sf.py4j</groupId>
       <artifactId>py4j</artifactId>
       <version>0.10.9</version>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
