--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.12</artifactId>
-      <version>3.0.0</version>
+      <version>3.0.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -35,6 +35,13 @@
       <groupId>io.ray</groupId>
       <artifactId>ray-runtime</artifactId>
       <version>0.1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>net.sf.py4j</groupId>
+      <artifactId>py4j</artifactId>
+      <version>0.10.9</version>
+      <scope>provided</scope>
     </dependency>
 
   </dependencies>
