--- a/core/pom.xml
+++ b/core/pom.xml
@@ -26,6 +26,12 @@
     </dependency>
 
     <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_2.12</artifactId>
+      <version>3.0.1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>io.ray</groupId>
       <artifactId>ray-api</artifactId>
       <version>0.1-SNAPSHOT</version>
