--- a/core/pom.xml
+++ b/core/pom.xml
@@ -149,7 +149,7 @@
           <sourceDirectories>
             <directory>${project.basedir}/src/main/java</directory>
           </sourceDirectories>
-          <configLocation>checkstyle.xml</configLocation>
+          <configLocation>javastyle.xml</configLocation>
           <consoleOutput>true</consoleOutput>
           <failsOnError>true</failsOnError>
           <failOnViolation>true</failOnViolation>
@@ -166,7 +166,7 @@
 
       <plugin>
         <groupId>org.scalastyle</groupId>
-         <artifactId>scalastyle-maven-plugin</artifactId>
+        <artifactId>scalastyle-maven-plugin</artifactId>
         <version>1.0.0</version>
         <configuration>
           <verbose>false</verbose>
@@ -174,7 +174,7 @@
           <failOnWarning>true</failOnWarning>
           <sourceDirectory>${project.basedir}/src/main/scala</sourceDirectory>
           <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
-          <configLocation>scalastyle_config.xml</configLocation>
+          <configLocation>scalastyle.xml</configLocation>
           <outputFile>${basedir}/target/scalastyle-output.xml</outputFile>
           <inputEncoding>${project.build.sourceEncoding}</inputEncoding>
           <outputEncoding>${project.reporting.outputEncoding}</outputEncoding>
