--- a/core/pom.xml
+++ b/core/pom.xml
@@ -22,25 +22,29 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.12</artifactId>
-      <version>3.0.1-SNAPSHOT</version>
+      <version>3.0.0</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-sql_2.12</artifactId>
-      <version>3.0.1-SNAPSHOT</version>
+      <version>3.0.0</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>io.ray</groupId>
       <artifactId>ray-api</artifactId>
       <version>0.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>io.ray</groupId>
       <artifactId>ray-runtime</artifactId>
       <version>0.1-SNAPSHOT</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
