--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -24,7 +24,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build and test:
 
     runs-on: ubuntu-latest
 
@@ -40,6 +40,8 @@ jobs:
           java-version: 1.8
       - name: build
         run: |
+          git config --global user.name "raydp"
+          git config --global user.email "raydp@intel.com"
           export RAYDP_BUILD_PYSPARK=1
           export RAYDP_BUILD_RAY=1
           ./build.sh
