--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Install dependencies & package
         run: |
           python -m pip install --upgrade pip
-          pip install pytest koalas
+          pip install pytest koalas wheel
           pip install dist/pyspark-3.0.0*.whl
           pip install dist/ray-*.whl
           pip install dist/raydp-*.whl
