--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -40,6 +40,8 @@ jobs:
           java-version: 1.8
       - name: build
         run: |
+          python -m pip install --upgrade pip
+          pip install wheel
           git config --global user.name "raydp"
           git config --global user.email "raydp@intel.com"
           export RAYDP_BUILD_PYSPARK=1
@@ -47,8 +49,7 @@ jobs:
           ./build.sh
       - name: Install dependencies & package
         run: |
-          python -m pip install --upgrade pip
-          pip install pytest koalas wheel
+          pip install pytest koalas
           pip install dist/pyspark-3.0.0*.whl
           pip install dist/ray-*.whl
           pip install dist/raydp-*.whl
