--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -38,6 +38,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: setup bazel
+        uses: abhinavsingh/setup-bazel@v3
+        with:
+          version: 3.2.0
       - name: build
         run: |
           python -m pip install --upgrade pip
