--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -38,10 +38,6 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Setup bazel
-        uses: abhinavsingh/setup-bazel@v3
-        with:
-          version: 3.2.0S
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -59,6 +55,7 @@ jobs:
         run: |
           git config --global user.name "raydp"
           git config --global user.email "raydp@intel.com"
+          export INSTALL_BAZEL=1
           dev/build_pyspark_with_patch.sh
           dev/build_ray_with_patch.sh
           mkdir ~/raydp_dist
