--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -42,30 +42,31 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel pytest koalas tensorflow torch tabulate
-      - name: Cache Spark and Ray
-        id: cache-spark-and-ray
+      - name: Cache Patched Spark
+        id: cache-spark
         uses: actions/cache@v2
         env:
-          cache-name: cache-spark-ray
+          cache-name: cache-spark
         with:
           path: ~/raydp_dist
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('dev/spark.patch') }}-${{ hashFiles('dev/ray.patch') }}
-      - name: Build Spark and Ray
-        if: steps.cache-spark-and-ray.outputs.cache-hit != 'true'
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('dev/spark.patch') }}
+      - name: Build pathced Spark
+        if: steps.cache-spark.outputs.cache-hit != 'true'
+        run: |
+          git config --global user.name "raydp"
+          git config --global user.email "raydp@intel.com"
+          dev/build_pyspark_with_patch.sh
+          mkdir ~/raydp_dist
+          mv dist/pyspark-3.0.0*.whl ~/raydp_dist
+      - name: Build and install package
         run: |
           git config --global user.name "raydp"
           git config --global user.email "raydp@intel.com"
           export INSTALL_BAZEL=1
-          dev/build_pyspark_with_patch.sh
-          dev/build_ray_with_patch.sh
-          mkdir ~/raydp_dist
-          mv dist/pyspark-3.0.0*.whl ~/raydp_dist
-          mv dist/ray-*.whl ~/raydp_dist
-      - name: Build and install package
-        run: |
+          export RAYDP_BUILD_RAY=1
           ./build.sh
           pip install ~/raydp_dist/pyspark-3.0.0*.whl
-          pip install ~/raydp_dist/ray-*.whl
+          pip install dist/ray-*.whl
           pip install dist/raydp-*.whl
       - name: Test with pytest
         run: |
