--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,6 +19,7 @@
     <fasterxml.jackson.version>2.10.0</fasterxml.jackson.version>
     <jersey.version>2.30</jersey.version>
     <scala.binary.version>2.12</scala.binary.version>
+    <ray.version>1.0.1</ray.version>
   </properties>
 
   <dependencies>
@@ -40,14 +41,14 @@
     <dependency>
       <groupId>io.ray</groupId>
       <artifactId>ray-api</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${ray.version}</version>
       <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>io.ray</groupId>
       <artifactId>ray-runtime</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${ray.version}</version>
       <scope>provided</scope>
     </dependency>
 
