--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.intel</groupId>
   <artifactId>raydp</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
 
   <name>raydp</name>
 
@@ -19,7 +19,7 @@
     <fasterxml.jackson.version>2.10.0</fasterxml.jackson.version>
     <jersey.version>2.30</jersey.version>
     <scala.binary.version>2.12</scala.binary.version>
-    <ray.version> 1.1.0-SNAPSHOT </ray.version>
+    <ray.version>1.1.0</ray.version>
   </properties>
 
   <repositories>
