--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,5 @@
-FROM rayproject/ray:91d54e
+FROM rayproject/ray:1.1.0
 
-# path to pyspark wheel file
-ARG PYSPARK_WHEEL_PATH
 # path to raydp wheel file
 ARG RAYDP_WHEEL_PATH
 ARG HTTP_PROXY
@@ -17,13 +15,11 @@ RUN sudo http_proxy=${HTTP_PROXY} https_proxy=${HTTPS_PROXY} apt-get update -y \
     && sudo mkdir /raydp && sudo chown -R ray /raydp
 WORKDIR /raydp
 
-COPY $PYSPARK_WHEEL_PATH /raydp
 COPY $RAYDP_WHEEL_PATH /raydp
 
 # install pyspark and raydp
 RUN $HOME/anaconda3/bin/pip --no-cache-dir \
-    install $(basename $PYSPARK_WHEEL_PATH) $(basename $RAYDP_WHEEL_PATH) \
-    && sudo rm /raydp/$(basename $PYSPARK_WHEEL_PATH) \
+    install $(basename $RAYDP_WHEEL_PATH) \
     && sudo rm /raydp/$(basename $RAYDP_WHEEL_PATH)
 
 # unset http_proxy & https_proxy
