--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -43,3 +43,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
+        skip_existing: true
