--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -35,6 +35,10 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
     - name: Build wheel
       env:
         RAYDP_PACKAGE_NAME: raydp_nightly
