--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -26,7 +26,7 @@ on:
 jobs:
   build-and-publish:
     # do not run in forks
-    if: ${{ startsWith(github.ref, 'refs/tags') && (github.repository_owner == 'oap-project') }}
+    if: ${{ github.repository_owner == 'oap-project' }}
     name: build wheel and upload
     runs-on: ubuntu-latest
     steps:
