--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -26,15 +26,17 @@ on:
 jobs:
   check-commit-date:
     name: check commit date is today
-    run: |
-         :
-         timestamp=$(git log --no-walk --date=unix --format=%cd $GITHUB_SHA)
-         echo $GITHUB_SHA
-         days=$(( ( $(date --utc +%s) - $timestamp ) / 86400 ))
-         echo $days
-         if [ $days -eq 0 ]; then
-            echo COMMIT_SINCE_LAST_UPLOAD=true >> $GITHUB_ENV
-         fi
+    steps:
+    - name: days since the commit date
+      run: |
+          :
+          timestamp=$(git log --no-walk --date=unix --format=%cd $GITHUB_SHA)
+          echo $GITHUB_SHA
+          days=$(( ( $(date --utc +%s) - $timestamp ) / 86400 ))
+          echo $days
+          if [ $days -eq 0 ]; then
+              echo COMMIT_SINCE_LAST_UPLOAD=true >> $GITHUB_ENV
+          fi
   build-and-publish:
     # do not run in forks
     # if: ${{ github.repository_owner == 'oap-project' }}
