--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel pytest koalas tensorflow torch tabulate ray==1.1.0
+          pip install wheel pytest koalas tensorflow torch tabulate ray==1.1.0 xgboost_ray horovod[ray]
 
       - name: Build and install
         run: |
@@ -59,3 +59,10 @@ jobs:
       - name: Test with pytest
         run: |
           pytest python/raydp/tests/
+      - name: Test Examples
+        run: |
+          python examples/pytorch_nyctaxi.py
+          python examples/tensorflow_nyctaxi.py
+          python examples/horovod_nyctaxi.py
+          python examples/xgboost_ray_nyctaxi.py
+          python examples/raysgd_nyctaxi.py
