--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -46,6 +46,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          HOROVOD_WITH_GLOO=1
           pip install wheel pytest koalas tensorflow torch tabulate ray==1.1.0 xgboost_ray horovod[ray]
 
       - name: Build and install
