--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -43,6 +43,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Install extra dependencies for macOS
+        if: matrix.os == "macos-latest"
+        run: |
+          brew install libuv
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
