--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -66,9 +66,11 @@ jobs:
           pytest python/raydp/tests/
       - name: Test Examples
         run: |
+          ray start --head
           python examples/random_nyctaxi.py
           python examples/pytorch_nyctaxi.py
           python examples/tensorflow_nyctaxi.py
           python examples/horovod_nyctaxi.py
           python examples/xgboost_ray_nyctaxi.py
           python examples/raysgd_nyctaxi.py
+          ray stop
