--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -51,7 +51,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           HOROVOD_WITH_GLOO=1
-          pip install wheel pytest koalas tensorflow torch tabulate ray==1.1.0 xgboost_ray horovod[ray]
+          HOROVOD_WITH_PYTORCH=1
+          pip install wheel pytest koalas tensorflow torch tabulate ray==1.1.0 xgboost_ray horovod[pytorch,ray]
 
       - name: Build and install
         run: |
