try latest ray and pytorch

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -52,7 +52,7 @@ jobs:
           python -m pip install --upgrade pip
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
-          pip install wheel pytest koalas tensorflow torch==1.7.1 tabulate ray[tune]==1.1.0 xgboost_ray horovod[pytorch,ray]
+          pip install wheel pytest koalas tensorflow torch tabulate ray[tune] xgboost_ray horovod[pytorch,ray]
 
       - name: Build and install
         run: |
