add more examples (#103)
* add xgboost examples

* comment

* add horovod example

* change notebooks to scripts

* make all nyctaxi examples scripts

* add readme

* delete invalid arguments

* add raysgd example and update readme

* add ray tune part

* format

* update ci

* fix horovod install

* fix macos horovod issue

* fix

* init ray cluster by default to pass CI on github

* add a random dataset generator to enable CI

* share ray cluser && decrease resource demand

* fix horovod install

* fix macos xgboost

* fix ray tune

* further reduce cpu demand

* Update .gitignore

* Update examples/data_process.py

* Update examples/horovod_nyctaxi.py

* Update examples/random_nyctaxi.py

* format

* latest torch break tests

* try latest ray and pytorch

* skip tensorflow because it's outdated
refactor later

* test pytest release resource

* test init ray instead of connect

* print avaible resources to debug

* cleanup

Co-authored-by: Xianyang Liu <liu-xianyang@hotmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,14 @@ dist/
 
 dev/.tmp_dir/
 target/
+*.jar
 
 .DS_Store
 
 .vscode
-
 examples/.ipynb_checkpoints/
 
 # Vim temp files
 *.swp
 *.swo
+*.csv
