--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -43,10 +43,16 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+      - name: Install extra dependencies for macOS
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew install libuv libomp
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install wheel pytest koalas tensorflow torch tabulate ray==1.1.0
+          HOROVOD_WITH_GLOO=1
+          HOROVOD_WITH_PYTORCH=1
+          pip install wheel pytest koalas tensorflow torch tabulate ray[tune] xgboost_ray horovod[pytorch,ray]
 
       - name: Build and install
         run: |
@@ -59,3 +65,11 @@ jobs:
       - name: Test with pytest
         run: |
           pytest python/raydp/tests/
+      - name: Test Examples
+        run: |
+          python examples/random_nyctaxi.py
+          python examples/pytorch_nyctaxi.py
+          python examples/tensorflow_nyctaxi.py
+          python examples/horovod_nyctaxi.py
+          python examples/xgboost_ray_nyctaxi.py
+          python examples/raysgd_nyctaxi.py
