--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -47,6 +47,18 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install libuv libomp
+      - name: Cache pip - Ubuntu
+        if: matrix.os == 'ubuntu-latest'
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ matrix.os }}-${{ matrix.python-version }}-pip
+      - name: Cache pip - MacOS
+        if: matrix.os == 'macos-latest'
+        uses: actions/cache@v2
+        with:
+          path: ~/Library/Caches/pip
+          key: ${{ matrix.os }}-${{ matrix.python-version }}-pip
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -55,7 +67,11 @@ jobs:
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
           pip install horovod[pytorch,ray]
-
+      - name: Cache Maven
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ matrix.os }}-m2-${{ hashFiles('core/pom.xml') }}
       - name: Build and install
         run: |
           ./build.sh
