--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -47,10 +47,17 @@ jobs:
         if: matrix.os == 'macos-latest'
         run: |
           brew install libuv libomp
-      - name: Cache pip
+      - name: Cache pip - Ubuntu
+        if: matrix.os == 'ubuntu-latest'
         uses: actions/cache@v2
         with:
           path: ~/.cache/pip
+          key: ${{ matrix.os }}-${{ matrix.python-version }}-pip
+      - name: Cache pip - MacOS
+        if: matrix.os == 'macos-latest'
+        uses: actions/cache@v2
+        with:
+          path: ~/Library/Caches/pip
           key: ${{ matrix.os }}-${{ matrix.python-version }}-pip
       - name: Install dependencies
         run: |
