--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
-          pip install pytest koalas tensorflow torch tabulate ray[tune] xgboost_ray
+          pip install pytest koalas tensorflow torch tabulate ray[tune] xgboost_ray grpcio-tools
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
           pip install horovod[pytorch,ray]
