--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -63,7 +63,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
-          pip install pytest koalas tensorflow torch tabulate ray[tune] xgboost_ray grpcio-tools
+          pip install torch==1.8.1+cpu -f https://download.pytorch.org/whl/torch_stable.html
+          pip install pytest koalas tensorflow tabulate ray[tune] xgboost_ray grpcio-tools
           HOROVOD_WITH_GLOO=1
           HOROVOD_WITH_PYTORCH=1
           pip install horovod[pytorch,ray]
