--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -97,3 +97,4 @@ jobs:
           python examples/horovod_nyctaxi.py
           python examples/xgboost_ray_nyctaxi.py
           python examples/raysgd_nyctaxi.py
+          python examples/data_process.py
