--- a/core/pom.xml
+++ b/core/pom.xml
@@ -233,6 +233,13 @@
           <failOnViolation>true</failOnViolation>
           <violationSeverity>warning</violationSeverity>
         </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>com.puppycrawl.tools</groupId>
+            <artifactId>checkstyle</artifactId>
+            <version>8.39</version>
+          </dependency>
+        </dependencies>
         <executions>
           <execution>
             <goals>
