--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -91,6 +91,8 @@ jobs:
           pytest python/raydp/tests/
       - name: Test Examples
         run: |
+          # set SPARK_HOME for raydp-submit to run
+          python $(python -c "import pyspark,os;print(os.path.dirname(pyspark.__file__))")/find_spark_home.py
           python examples/random_nyctaxi.py
           python examples/pytorch_nyctaxi.py
           python examples/tensorflow_nyctaxi.py
