--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -93,6 +93,7 @@ jobs:
           pytest python/raydp/tests/
       - name: Test Examples
         run: |
+          examples/raydp-submit.sh
           python examples/random_nyctaxi.py
           python examples/pytorch_nyctaxi.py
           python examples/tensorflow_nyctaxi.py
