update ci to enable manually triggering

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -22,6 +22,7 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  workflow_dispatch:
 
 jobs:
   build-and-test:
