Update example to use Ray dataset and Ray train (#206)
* port to raydata api & try ray train

* fix the review 220119, to use pure ray train

* rename the file & use ray.train api to prepare the model for distributed execution

* fix CI

* switch to distributed & fix acc

* fix resources warning

* pylint check raytrain

* fix style: examples/*.py

* remove gpu support

* update

* fix pylint

* skip raydp-submit.py

* resume raydp-submit

* fix lint

* fix pylint

* remove parallelism

* fix pylint

--- a/.github/workflows/raydp.yml
+++ b/.github/workflows/raydp.yml
@@ -97,6 +97,7 @@ jobs:
         run: |
           pip install pylint==2.8.3
           pylint --rcfile=python/pylintrc python/raydp
+          pylint --rcfile=python/pylintrc examples/*.py
       - name: Test with pytest
         run: |
           ray start --head --num-cpus 4
@@ -113,5 +114,5 @@ jobs:
           python examples/tensorflow_nyctaxi.py
           python examples/horovod_nyctaxi.py
           python examples/xgboost_ray_nyctaxi.py
-          python examples/raysgd_nyctaxi.py
+          python examples/raytrain_nyctaxi.py
           python examples/data_process.py
